--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,22 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ABU32lJ1JpUF+glyOdCjy1zw6y+PCQ/nGPFaRUOhWuQ=
 APP_DEBUG=true
-APP_URL=https://laravelbakkali.azurewebsites.net/
+APP_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:3000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=database
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=backend
-DB_USERNAME=root
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
@@ -43,9 +44,9 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_ID=123456
+PUSHER_APP_KEY=123456
+PUSHER_APP_SECRET=123456
 PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
