Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/master_laravelbakkali.yml
+++ b/.github/workflows/master_laravelbakkali.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy PHP app to Azure Web App - Laravelbakkali
+name: Build and deploy PHP app to Azure Web App - laravelbakkali
 
 on:
   push:
@@ -60,7 +60,7 @@ jobs:
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'Laravelbakkali'
+          app-name: 'laravelbakkali'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_22AA3E0136CD431B8605AF017B50D9A6 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_44FADCD9E1CC4C6D908934B57E356C1A }}
           package: .
